--- a/Movie Finder/Base.lproj/Main.storyboard
+++ b/Movie Finder/Base.lproj/Main.storyboard
@@ -16,33 +16,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7eU-LX-ze2" userLabel="SearchView">
-                                <rect key="frame" x="30" y="114" width="354" height="50"/>
+                                <rect key="frame" x="30" y="158" width="354" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vdV-c3-Hre">
-                                        <rect key="frame" x="10" y="16" width="299" height="18.5"/>
+                                        <rect key="frame" x="10" y="16" width="294" height="18.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                                        <connections>
-                                            <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="k6s-Rl-GT0"/>
-                                            <segue destination="uIs-BX-PhJ" kind="show" id="Qgb-8v-PtD"/>
-                                        </connections>
                                     </textField>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EzV-AZ-FOv">
-                                        <rect key="frame" x="314" y="11" width="30" height="28"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gNB-zT-zAw">
+                                        <rect key="frame" x="314" y="12" width="30" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="hiy-YU-ei6"/>
-                                            <constraint firstAttribute="height" constant="30" id="iNG-lV-cNU"/>
+                                            <constraint firstAttribute="width" constant="30" id="YED-yF-5cQ"/>
                                         </constraints>
-                                    </imageView>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="magnifyingglass" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="searchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wFk-Kl-yVF"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="EzV-AZ-FOv" firstAttribute="centerY" secondItem="7eU-LX-ze2" secondAttribute="centerY" id="8FZ-5l-xDR"/>
                                     <constraint firstItem="vdV-c3-Hre" firstAttribute="centerY" secondItem="7eU-LX-ze2" secondAttribute="centerY" id="8cj-wu-Uku"/>
-                                    <constraint firstAttribute="trailing" secondItem="EzV-AZ-FOv" secondAttribute="trailing" constant="10" id="Ewr-sF-tFD"/>
+                                    <constraint firstItem="gNB-zT-zAw" firstAttribute="leading" secondItem="vdV-c3-Hre" secondAttribute="trailing" constant="10" id="FfO-5D-tDw"/>
+                                    <constraint firstItem="gNB-zT-zAw" firstAttribute="centerY" secondItem="7eU-LX-ze2" secondAttribute="centerY" id="VI2-y0-PBy"/>
                                     <constraint firstItem="vdV-c3-Hre" firstAttribute="leading" secondItem="7eU-LX-ze2" secondAttribute="leading" constant="10" id="aJR-zv-vAk"/>
-                                    <constraint firstItem="EzV-AZ-FOv" firstAttribute="leading" secondItem="vdV-c3-Hre" secondAttribute="trailing" constant="5" id="bFJ-50-3ux"/>
+                                    <constraint firstAttribute="trailing" secondItem="gNB-zT-zAw" secondAttribute="trailing" constant="10" id="hwZ-kD-i6T"/>
                                     <constraint firstAttribute="height" constant="50" id="rzF-zQ-O4M"/>
                                 </constraints>
                             </view>
@@ -69,6 +71,7 @@
                     <connections>
                         <outlet property="searchFieldView" destination="7eU-LX-ze2" id="GCi-sa-aFe"/>
                         <outlet property="searchTextField" destination="vdV-c3-Hre" id="DEo-PA-HhD"/>
+                        <segue destination="uIs-BX-PhJ" kind="show" identifier="MovieList" id="UFe-e9-GdL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -78,13 +81,13 @@
         <!--Movie List View Controller-->
         <scene sceneID="EnT-UG-SRQ">
             <objects>
-                <tableViewController id="uIs-BX-PhJ" customClass="MovieListViewController" customModule="Movie_Finder" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="MovieListViewController" id="uIs-BX-PhJ" customClass="MovieListViewController" customModule="Movie_Finder" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4zu-wl-smI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="i4v-vm-GqW" customClass="MovieCell" customModule="Movie_Finder" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" id="i4v-vm-GqW" customClass="MovieCell" customModule="Movie_Finder" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="i4v-vm-GqW" id="uFy-AR-Ynr">
@@ -106,7 +109,7 @@
                                                                 <constraint firstAttribute="height" constant="40" id="GFd-ab-odv"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Relase Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxz-VE-vFm">
@@ -115,13 +118,13 @@
                                                                 <constraint firstAttribute="height" constant="40" id="mIF-ff-6tV"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Discription" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yVo-t2-hyW">
                                                             <rect key="frame" x="0.0" y="80" width="204.5" height="70"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -133,10 +136,11 @@
                                         <constraint firstAttribute="bottom" secondItem="eGa-Bu-QyD" secondAttribute="bottom" id="Mhq-BY-zz5"/>
                                         <constraint firstItem="eGa-Bu-QyD" firstAttribute="leading" secondItem="uFy-AR-Ynr" secondAttribute="leading" id="S5L-jC-kyG"/>
                                         <constraint firstAttribute="trailing" secondItem="eGa-Bu-QyD" secondAttribute="trailing" id="oak-ac-a2B"/>
+                                        <constraint firstItem="eGa-Bu-QyD" firstAttribute="top" secondItem="uFy-AR-Ynr" secondAttribute="top" id="rFA-U7-rOp"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="u4F-Cn-YjR" kind="show" id="VBh-Ty-Cet"/>
+                                    <segue destination="u4F-Cn-YjR" kind="show" id="xLt-t7-UOh"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -189,10 +193,12 @@
         <!--Navigation Controller-->
         <scene sceneID="Kpo-Np-1rL">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="0j2-2E-eHV" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0j2-2E-eHV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Wa-lq-QoM">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
