--- a/Movie Finder/Base.lproj/Main.storyboard
+++ b/Movie Finder/Base.lproj/Main.storyboard
@@ -56,12 +56,46 @@
                                 </constraints>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                             </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NOZ-SU-Jr2">
+                                <rect key="frame" x="30" y="213" width="354" height="344"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchCell" id="P2R-Oo-Hfq" customClass="SearchTableViewCell" customModule="Movie_Finder" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="354" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="P2R-Oo-Hfq" id="c5b-zR-BKm">
+                                            <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this is a history search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3z-iI-ZSz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="T3z-iI-ZSz" secondAttribute="bottom" id="FRO-RK-V5Z"/>
+                                                <constraint firstAttribute="trailing" secondItem="T3z-iI-ZSz" secondAttribute="trailing" id="aLk-GF-kBa"/>
+                                                <constraint firstItem="T3z-iI-ZSz" firstAttribute="leading" secondItem="c5b-zR-BKm" secondAttribute="leading" id="j41-1U-7dX"/>
+                                                <constraint firstItem="T3z-iI-ZSz" firstAttribute="top" secondItem="c5b-zR-BKm" secondAttribute="top" id="oAL-xy-fFw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="searchLabel" destination="T3z-iI-ZSz" id="YMb-yr-iBw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7eU-LX-ze2" secondAttribute="trailing" constant="30" id="529-JS-a1z"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="8Tn-Rn-0Gg"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8wA-aS-Upt"/>
+                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="top" secondItem="7eU-LX-ze2" secondAttribute="bottom" constant="5" id="PYI-1p-YE1"/>
+                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="width" secondItem="7eU-LX-ze2" secondAttribute="width" id="SWp-w4-bU7"/>
+                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ckS-lj-h05"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dNA-q0-k89" secondAttribute="bottom" constant="100" id="l9U-K6-BFx"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="nkO-kw-5SQ"/>
                             <constraint firstItem="dNA-q0-k89" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o4c-sh-NtI"/>
@@ -72,6 +106,7 @@
                     <connections>
                         <outlet property="searchFieldView" destination="7eU-LX-ze2" id="ELa-ek-zNy"/>
                         <outlet property="searchTextField" destination="vdV-c3-Hre" id="phP-RC-guP"/>
+                        <outlet property="tableView" destination="NOZ-SU-Jr2" id="B25-MW-aAt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
